--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodedom app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Rhaegar09/Reto_Tecnico_Concurso_De_Preguntas_y_Respuestas/issues"
   },
-  "homepage": "https://github.com/Rhaegar09/Reto_Tecnico_Concurso_De_Preguntas_y_Respuestas#readme"
+  "homepage": "https://github.com/Rhaegar09/Reto_Tecnico_Concurso_De_Preguntas_y_Respuestas#readme",
+  "dependencies": {
+    "firebase": "^9.6.1",
+    "mongoose": "^6.1.3",
+    "nodemon": "^2.0.15"
+  }
 }
